--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,6 +1,6 @@
-name: 🐛 Bug Report
+name:  Bug Report
 description: File a bug report
-title: '[Bug]: '
+title: Template
 body:
   - type: markdown
     attributes:
