--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -18,3 +18,13 @@ body:
         - set-output
     validations:
       required: true  
+
+  - type: dropdown
+    id: _releases
+    attributes:
+      label: Repository releases
+      description: Fetched by action
+      options:       
+        - v1.0        
+    validations:
+      required: true      
