--- a/.github/workflows/update_issue_template.yml
+++ b/.github/workflows/update_issue_template.yml
@@ -1,10 +1,8 @@
 name: 🚀 Update Issue template Report
 
 on:  
-
-  workflow_dispatch:
   release:
-    types: [created, deleted]
+    types: [published]
   create:   
   delete:
     
