--- a/.github/workflows/update_issue_template.yml
+++ b/.github/workflows/update_issue_template.yml
@@ -2,7 +2,7 @@ name: 🚀 Update Issue template Report
 
 on:  
   release:
-    types: [published]
+    types: [released]
   create:   
   delete:
     
