--- a/.github/workflows/update_issue_template.yml
+++ b/.github/workflows/update_issue_template.yml
@@ -2,9 +2,10 @@ name: 🚀 Update Issue template
 
 on:  
   workflow_dispatch:  
-  create:   
+  create:
   delete:
-    
+  release:
+    types: [created, published, deleted]
 
 jobs:
   branch_event:
@@ -15,15 +16,19 @@ jobs:
       - name: Check if branch was created or deleted
         id: branch_eventType
         run: |
-          echo ${{ github.event_name }}
-            if [ "${{ github.event.ref_type }}" == "branch" ]  || [ "${{ github.event_name }}" == "release" ]; then
-            echo "Branch created: ${GITHUB_REF#refs/heads/}"
-            echo "result=true" >> "$GITHUB_OUTPUT"         
+         echo ${{ github.event_name }}
+         echo ${{ github.event.ref_type }}
+
+         #if event is for release or branch
+         if [ "${{ github.event_name }}" == "release" ]; then
+            echo "result=true" >> "$GITHUB_OUTPUT"
+          elif [ "${{ github.event_name }}" == "create" ]; then
+            echo "result=true" >> "$GITHUB_OUTPUT"
+          elif [ "${{ github.event_name }}" == "delete" ]; then
+            echo "result=true" >> "$GITHUB_OUTPUT"
           else
-            echo "Branch deleted: ${GITHUB_REF#refs/heads/}"
             echo "result=false" >> "$GITHUB_OUTPUT"
           fi
-
   pre:
     name: Prepare context for other jobs
     runs-on: ubuntu-latest
