--- a/actions/update-issue-form-template/action.yml
+++ b/actions/update-issue-form-template/action.yml
@@ -102,7 +102,7 @@ runs:
     - name: Update ${{ inputs.form }}
       id: process
       run: |
-        node ${{ github.action_path }}/dist/main.cjs
+        node ./dist/main.cjs
         if [[ $(git status --porcelain | grep -c '.*\s*${{ inputs.form }}') -eq 1 ]]; then
           echo "Form ${{ inputs.form }} has been modified"
           echo "::set-output name=modified::true"
