--- a/.github/workflows/update_issue_template.yml
+++ b/.github/workflows/update_issue_template.yml
@@ -5,7 +5,7 @@ on:
   create:
   delete:
   release:
-    types: [created, published, deleted]
+    types: [published, deleted]
 
 jobs:
   branch_event:
