--- a/.github/workflows/update_issue_template.yml
+++ b/.github/workflows/update_issue_template.yml
@@ -76,7 +76,7 @@ jobs:
           script: |
             return github
               .rest.repos.listReleases(context.repo)
-              .then((res) => res.data.map((r) => r.tag_name));
+              .then((res) => res.data.map((r) => `${r.tag_name} ${new Date(r.created_at).toLocaleDateString('en-US', { month: 'short', day: '2-digit', year: 'numeric' })}`));
   
   update-bug-report:
     name: Update bug report on branch `${{ needs.pre.outputs.branch }}`
