--- a/.github/workflows/update_issue_template.yml
+++ b/.github/workflows/update_issue_template.yml
@@ -6,33 +6,34 @@ on:
   delete:  
 
 jobs:
-  branch_event:
-    runs-on: ubuntu-latest
-    outputs:
-      branch_event_type: ${{ steps.branch_eventType.outputs.result }}
-    steps:
-      - name: Check if branch was created or deleted
-        id: branch_eventType
-        run: |
-         echo ${{ github.event_name }}
-         echo ${{ github.event.ref_type }}
+  # branch_event:
+  #   runs-on: ubuntu-latest
+  #   outputs:
+  #     branch_event_type: ${{ steps.branch_eventType.outputs.result }}
+  #   steps:
+  #     - name: Check if branch was created or deleted
+  #       id: branch_eventType
+  #       run: |
+  #        echo ${{ github.event_name }}
+  #        echo ${{ github.event.ref_type }}
 
-         #if event is for release or branch
-         if [ "${{ github.event_name }}" == "release" ]; then
-            echo "result=true" >> "$GITHUB_OUTPUT"
-          elif [ "${{ github.event_name }}" == "create" ]; then
-            echo "result=true" >> "$GITHUB_OUTPUT"
-          elif [ "${{ github.event_name }}" == "delete" ]; then
-            echo "result=true" >> "$GITHUB_OUTPUT"
-          else
-            echo "result=false" >> "$GITHUB_OUTPUT"
-          fi
+  #        #if event is for release or branch
+  #        if [ "${{ github.event_name }}" == "release" ]; then
+  #           echo "result=true" >> "$GITHUB_OUTPUT"
+  #         elif [ "${{ github.event_name }}" == "create" ]; then
+  #           echo "result=true" >> "$GITHUB_OUTPUT"
+  #         elif [ "${{ github.event_name }}" == "delete" ]; then
+  #           echo "result=true" >> "$GITHUB_OUTPUT"
+  #         else
+  #           echo "result=false" >> "$GITHUB_OUTPUT"
+  #         fi
+
   pre:
     name: Prepare context for other jobs
     runs-on: ubuntu-latest
     #check if above job output value is branch
-    needs: branch_event
-    if: ${{ needs.branch_event.outputs.branch_event_type == 'true' }}
+    # needs: branch_event
+    # if: ${{ needs.branch_event.outputs.branch_event_type == 'true' }}
     outputs:
       # needed in order to reference the local action
       branch: ${{ steps.branch.outputs.job_ref }}
@@ -45,7 +46,7 @@ jobs:
         run: |
           BRANCH=""
           if [ ${{ github.event_name == 'release' }} == true ]; then
-            BRANCH=${{ github.event.release.target_commitish }}
+            BRANCH=${{ github.event.release.target_commitish || github.sha }}
           elif [ ${{ github.event_name == 'create' }} == true ]; then
             BRANCH=${{ github.event.repository.default_branch }}
           elif [ ${{ github.event_name == 'pull_request' }} == true ]; then
