--- a/.github/workflows/update_issue_template.yml
+++ b/.github/workflows/update_issue_template.yml
@@ -78,11 +78,11 @@ jobs:
             return github
               .rest.repos.listReleases(context.repo)
               .then((res) => {
-                const releases = res.data.map((r) => `${r.tag_name} ${new Date(r.created_at).toLocaleDateString('en-US', { month: 'short', day: '2-digit', year: 'numeric' })}`);
+                const releases = res.data.map((r) => `${r.tag_name} ${new Date(r.created_at).toLocaleDateString('en-US', { month: 'long', day: '2-digit', year: 'numeric' }).replace(',', '')}`);
                 console.log(releases);
                 return releases;
               });
-              
+
   update-bug-report:
     name: Update bug report on branch `${{ needs.pre.outputs.branch }}`
     runs-on: ubuntu-latest
