--- a/.github/workflows/update_issue_template.yml
+++ b/.github/workflows/update_issue_template.yml
@@ -92,7 +92,7 @@ jobs:
           script: |
              return github
               .rest.repos.getAllEnvironments(context.repo)
-              .then((res) => res.data.map((b) => b.name));    
+              .then((res) => res.data.environments.map((b) => b.name));    
 
   update-bug-report:
     name: Update bug report on branch `${{ needs.pre.outputs.branch }}`
