--- a/.github/workflows/update_issue_template.yml
+++ b/.github/workflows/update_issue_template.yml
@@ -90,9 +90,9 @@ jobs:
         with:
           result-encoding: string
           script: |
-             return github
+            return github
               .rest.repos.getAllEnvironments(context.repo)
-              .then((res) => res.data.environments.map((b) => b.name));    
+              .then((res) => (res.data.environments ? res.data.environments.map((b) => b.name) : []));    
 
   update-bug-report:
     name: Update bug report on branch `${{ needs.pre.outputs.branch }}`
