--- a/.github/ISSUE_TEMPLATE/issue_template.yml
+++ b/.github/ISSUE_TEMPLATE/issue_template.yml
@@ -26,8 +26,8 @@ body:
       label: Environment
       description: Environment to deploy
       options:
-        - dev
         - qa
+        - prod
     validations:
       required: true
   - type: dropdown
