--- a/.github/ISSUE_TEMPLATE/issue_template.yml
+++ b/.github/ISSUE_TEMPLATE/issue_template.yml
@@ -18,6 +18,9 @@ body:
         - sec
         - second
         - test
+        - third
+        - fourth
+        - fifth
     validations:
       required: true
   - type: dropdown
